# lomiri-online-accounts-plugins-caldav

./: AUTHORS  CMakeLists.txt  ChangeLog  README.md
accounts/: CMakeLists.txt
accounts/plugin/: CMakeLists.txt  generic-caldav.provider.in
accounts/plugin/qml/: Main.qml  NewAccount.qml
accounts/services/: CMakeLists.txt  google-calendars.service.in  lomiri-generic-caldav.service.in  lomiri-google-caldav.service.in  lomiri-nextcloud-caldav.service.in  lomiri-owncloud-caldav.service.in
buteo/: CMakeLists.txt
buteo/sync-profiles/: CMakeLists.txt  google.Calendars.xml  lomiri-generic-caldav.xml  lomiri-google-caldav.xml  lomiri-nextcloud-caldav.xml  lomiri-owncloud-caldav.xml
debian/: changelog  control  copyright  files  lomiri-online-accounts-plugin-caldav-generic.install  lomiri-online-accounts-plugin-google-caldav.install  lomiri-online-accounts-plugin-nextcloud-caldav.install  lomiri-online-accounts-plugin-owncloud-caldav.install
its/: providers.its  providers.loc  services.its  services.loc
po/: CMakeLists.txt  LINGUAS  POTFILES.in  am.po  ast.po  be.po  bn_BD.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  gd.po  gl.po  he.po  hr.po  hu.po  hy.po  ia.po  id.po  it.po  ja.po  km.po  ko.po  lomiri-online-accounts-plugins-caldav.pot  ms.po  nb.po  nl.po  oc.po  (+18 more)
